--- a/src/main/resources/main_package/oop_gui/GUI.fxml
+++ b/src/main/resources/main_package/oop_gui/GUI.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
@@ -8,10 +9,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="335.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="335.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main_package.oop_gui.Controllers.ChatController">
    <top>
       <AnchorPane id="header" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="60.0" prefWidth="355.0" styleClass="body" stylesheets="@css/layout.css" BorderPane.alignment="CENTER">
          <children>
@@ -28,25 +30,6 @@
          </children>
       </AnchorPane>
    </top>
-   <center>
-      <ScrollPane prefHeight="200.0" prefWidth="200.0" styleClass="body" stylesheets="@css/layout.css" BorderPane.alignment="CENTER">
-         <content>
-            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="458.0" prefWidth="333.0" styleClass="chat_background" stylesheets="@css/chat.css">
-               <children>
-                  <Label id="right" layoutX="286.0" layoutY="14.0" styleClass="chat_bubble" stylesheets="@css/chat.css" text="MESSAGE FROM THIS SIDE" wrapText="true" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="8.0">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </Label>
-                  <Label id="left" layoutX="14.0" layoutY="68.0" styleClass="chat_bubble" stylesheets="@css/chat.css" text="MESSAGE FROM THE OTHER SIDE" wrapText="true" AnchorPane.leftAnchor="8.0" AnchorPane.topAnchor="72.0">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </Label>
-               </children></AnchorPane>
-         </content>
-      </ScrollPane>
-   </center>
    <bottom>
       <AnchorPane id="footer" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="80.0" prefWidth="200.0" styleClass="body" stylesheets="@css/layout.css" BorderPane.alignment="CENTER">
          <children>
@@ -54,11 +37,24 @@
             <Button id="send_voice" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="32.0" prefWidth="32.0" stylesheets="@css/button.css" AnchorPane.rightAnchor="16.0" AnchorPane.topAnchor="16.0" />
             <HBox maxHeight="-Infinity" minHeight="-Infinity" prefHeight="32.0" prefWidth="216.0" styleClass="message_box" stylesheets="@css/layout.css" AnchorPane.leftAnchor="60.0" AnchorPane.topAnchor="16.0">
                <children>
-                  <TextField id="type_box" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="32.0" prefWidth="184.0" promptText="Send message" stylesheets="@css/layout.css" />
-                  <Button id="send_message" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="32.0" prefWidth="32.0" stylesheets="@css/button.css" />
+                  <TextField id="type_box" fx:id="textBox" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="32.0" prefWidth="184.0" promptText="Send message" stylesheets="@css/layout.css" />
+                  <Button id="send_message" defaultButton="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#getText" prefHeight="32.0" prefWidth="32.0" stylesheets="@css/button.css" />
                </children>
             </HBox>
          </children>
       </AnchorPane>
    </bottom>
+   <center>
+      <ScrollPane fx:id="sp_main" hbarPolicy="NEVER" prefHeight="200.0" prefWidth="200.0" stylesheets="@css/layout.css" BorderPane.alignment="CENTER">
+         <content>
+            <VBox fx:id="vboxMess" prefHeight="459.0" prefWidth="333.0" spacing="8.0">
+               <padding>
+                  <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+               </padding></VBox>
+         </content>
+         <BorderPane.margin>
+            <Insets />
+         </BorderPane.margin>
+      </ScrollPane>
+   </center>
 </BorderPane>
