--- a/src/main/resources/main_package/oop_gui/css/chat.css
+++ b/src/main/resources/main_package/oop_gui/css/chat.css
@@ -4,14 +4,17 @@
 
 .chat_bubble {
     -fx-label-padding: 0 4 0 4;
-    -fx-max-width: 186;
+    -fx-max-width: 216;
     -fx-background-color: white;
     -fx-background-radius: 8;
+    -fx-font-size: 16;
+    -fx-wrap-text: true;
 }
 
 #left {
-    -fx-background-color: silver;
+    -fx-background-color: gold;
 }
 
 #right {
+    -fx-background-color: white;
 }
