--- a/src/main/resources/main_package/oop_gui/css/layout.css
+++ b/src/main/resources/main_package/oop_gui/css/layout.css
@@ -2,6 +2,11 @@
     -fx-background-color: silver;
 }
 
+.scroll-pane .scroll-bar:vertical {
+    -fx-pref-width: 1;
+    -fx-opacity: 0;
+}
+
 #header {
 }
 
